Samples/C/Include/PCI1500.H


_INT_ i_PCI1500_GetNumberOfBoards (PBYTE	pb_NbrOfBoards );
_INT_ i_PCI1500_GetBoardInformation(BYTE		b_BoardIndex,
									DWORD		dw_IdentifierStringSize,
									PCHAR		pc_Identifier,
									PDWORD		pdw_UINumber,
									PDWORD		pdw_DeviceNumber,
									PDWORD		pdw_BusNumber,
									PDWORD		pdw_BaseAddress0,
									PDWORD		pdw_BaseAddress1,
									PDWORD		pdw_BaseAddress2,
									PBYTE		pb_Interrupt );
_INT_ i_PCI1500_GetSerialNumber(HANDLE h_DeviceHandle, DWORD *pdw_SerialNumber);
_INT_ i_PCI1500_GetFirmwareVersion (HANDLE h_DeviceHandle, PDWORD pdw_FirmwareVersion);
_INT_ i_PCI1500_SetSerialNumber(HANDLE h_DeviceHandle, DWORD dw_SerialNumber);
_INT_ i_PCI1500_OpenBoardViaIndex (BYTE	b_BoardIndex,
								   PHANDLE	ph_DeviceHandle );
_INT_ i_PCI1500_CloseBoard (HANDLE	h_DeviceHandle );
_INT_ i_PCI1500_GetDLLVersion (PDWORD	pdw_Version);
_INT_ i_PCI1500_GetDeviceDriverVersion(HANDLE h_DeviceHandle, PDWORD pdw_Version);
_INT_ i_PCI1500_SetBoardIntRoutine (HANDLE	h_DeviceHandle,
									void	(*v_FunctionName)(	HANDLE	h_DeviceHandle,
																BYTE	b_FIFOOverflow,
																BYTE	b_InterruptMask,
																WORD	w_InputValues )
);
_INT_ i_PCI1500_ResetBoardIntRoutine (HANDLE	h_DeviceHandle );
_INT_ i_PCI1500_Read1DigitalInput (HANDLE h_DeviceHandle,
								   BYTE b_Channel,
								   PBYTE pb_Value );
_INT_ i_PCI1500_Read8DigitalInputs (HANDLE	h_DeviceHandle,
									BYTE	b_Port,
									PBYTE	pb_Value );
_INT_ i_PCI1500_Read16DigitalInputs (HANDLE	h_DeviceHandle,
									 PWORD	pw_Value );
_INT_ i_PCI1500_Get16DigitalOutputsStatus  (HANDLE	deviceHandle,
											PWORD	status);
_INT_ i_PCI1500_SetDigitalOutputMemoryOn (HANDLE h_DeviceHandle );
_INT_ i_PCI1500_SetDigitalOutputMemoryOff (HANDLE h_DeviceHandle );
_INT_ i_PCI1500_Set1DigitalOutputOn (HANDLE	h_DeviceHandle,
									 BYTE	b_Channel );
_INT_ i_PCI1500_Set1DigitalOutputOff (HANDLE	h_DeviceHandle,
									  BYTE		b_Channel );
_INT_ i_PCI1500_Set8DigitalOutputsOn (HANDLE	h_DeviceHandle,
									  BYTE		b_Port,
									  BYTE		b_Mask );
_INT_ i_PCI1500_Set8DigitalOutputsOff (HANDLE	h_DeviceHandle,
									   BYTE		b_Port,
									   BYTE		b_Mask );
_INT_ i_PCI1500_Set16DigitalOutputsOn (HANDLE h_DeviceHandle,
									   WORD w_Mask );
_INT_ i_PCI1500_Set16DigitalOutputsOff (HANDLE h_DeviceHandle,
										WORD w_Mask );
_INT_ i_PCI1500_InitEventLogic (HANDLE	h_DeviceHandle,
								BYTE	b_PortNbr,
								BYTE	b_EventLogic,
								PCHAR	pc_EventMask );
_INT_ i_PCI1500_StartEventLogic (HANDLE h_DeviceHandle,
								 BYTE b_PortNbr );
_INT_ i_PCI1500_StopEventLogic (HANDLE h_DeviceHandle,
								BYTE b_PortNbr );
_INT_ i_PCI1500_InitTimerInputClock(HANDLE h_DeviceHandle,
									BYTE b_InputClockSelected);
_INT_ i_PCI1500_InitTimerCounter1(HANDLE h_DeviceHandle,
								  BYTE	b_ComponentMode,
								  WORD	w_ReloadValue,
								  BYTE	b_EnableContinuousCycle,
								  BYTE	b_EnableInterrupt);
_INT_ i_PCI1500_StartTimerCounter1(HANDLE h_DeviceHandle);
_INT_ i_PCI1500_StopTimerCounter1(HANDLE h_DeviceHandle);
_INT_ i_PCI1500_TriggerTimerCounter1(HANDLE h_DeviceHandle );
_INT_ i_PCI1500_ReadTimerCounter1(HANDLE h_DeviceHandle,
								  PWORD pw_TimerValue );
_INT_	i_PCI1500_InitTimerCounter2(HANDLE	h_DeviceHandle,
									BYTE	b_ComponentMode,
									WORD	w_ReloadValue,
									BYTE	b_EnableContinuousCycle,
									BYTE	b_EnableHardwareTrigger,
									BYTE	b_EnableHardwareGate,
									BYTE	b_EnableInterrupt);
_INT_ i_PCI1500_StartTimerCounter2(HANDLE h_DeviceHandle);
_INT_ i_PCI1500_StopTimerCounter2(HANDLE h_DeviceHandle);
_INT_ i_PCI1500_TriggerTimerCounter2(HANDLE h_DeviceHandle );
_INT_ i_PCI1500_ReadTimerCounter2(HANDLE h_DeviceHandle,
								  PWORD pw_TimerValue );
_INT_ i_PCI1500_InitWatchdogCounter3 (HANDLE	h_DeviceHandle,
									  BYTE	b_ComponentMode,
									  WORD	w_ReloadValue,
									  BYTE	b_EnableContinuousCycle,
									  BYTE	b_EnableHardwareGate,
									  BYTE	b_EnableInterrupt);
_INT_ i_PCI1500_StartWatchdogCounter3(HANDLE h_DeviceHandle);
_INT_ i_PCI1500_StopWatchdogCounter3(HANDLE h_DeviceHandle);
_INT_ i_PCI1500_TriggerWatchdogCounter3(HANDLE h_DeviceHandle );
_INT_ i_PCI1500_ReadWatchdogCounter3(HANDLE h_DeviceHandle,
									 PWORD pw_TimerValue );